# ara2-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  release.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  python.yml  release.yml  sbom.yml  test.yml
crates/ara2/: Cargo.toml
crates/ara2-py/: Cargo.toml  README.md  edgefirst_ara2.pyi  pyproject.toml  release.toml
crates/ara2-py/src/: endpoint.rs  error.rs  lib.rs  metadata.rs  model.rs  session.rs  types.rs
crates/ara2-sys/: Cargo.toml  README.md  dv_status_codes.h  dvapi.h  release.toml  update.sh
crates/ara2-sys/src/: ffi.rs  lib.rs
crates/ara2/benches/: model_benchmark.rs
crates/ara2/src/: dvm_metadata.rs  endpoint.rs  error.rs  lib.rs  model.rs  session.rs
examples/: endpoints.py  test_dvm_metadata.rs  yolov8.py  yolov8.rs
tests/: test.py
