[package]
name = "ara2-py"
version = "0.1.0"
edition = "2024"
authors = ["Au-Zone Technologies <support@au-zone.com>"]
description = "Python bindings for the ARA-2 neural accelerator client library"
homepage = "https://edgefirst.ai"
repository = "https://github.com/EdgeFirstAI/ara2-rs"
license = "Apache-2.0"
readme = "README.md"
publish = false

[lib]
name = "edgefirst_ara2"
crate-type = ["cdylib"]

[features]
default = []
# Enable stable ABI for Python 3.11+
abi3 = ["pyo3/abi3-py311"]

[dependencies]
ara2 = { version = "0.1.0", path = "../ara2" }
pyo3 = { version = "0.23", features = ["extension-module"] }
ndarray = "0.16"

[build-dependencies]
pyo3-build-config = "0.23"
