[package]
name = "ara2-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Python bindings for the ARA-2 neural accelerator client library"
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
publish = false

[lib]
name = "edgefirst_ara2"
crate-type = ["cdylib"]

[features]
default = []
# Enable stable ABI for Python 3.11+
abi3 = ["pyo3/abi3-py311"]

[dependencies]
ara2.workspace = true
edgefirst-hal.workspace = true
ndarray.workspace = true
numpy.workspace = true
pyo3 = { workspace = true, features = ["extension-module"] }

[build-dependencies]
pyo3-build-config.workspace = true
